4729
@Jason, I found my own post about this from a while ago: http://article.gmane.org/gmane.comp.lang.scala.user/30615

Here are the updated instructions:
```scala
$ curl http://pastie.org/pastes/1124288/download -o test.scala
$ curl http://jsoup.org/packages/jsoup-1.3.2.jar -o jsoup-1.3.2.jar
$ scalac -version
Scala compiler version 2.10.0 -- Copyright 2002-2012, LAMP/EPFL
$ scalac -classpath jsoup-1.3.2.jar test.scala
test.scala:5: error: illegal cyclic reference involving class Document
    val links = doc.select("img");
                    ^
one error found
```

My comment from that post my be relevant:
```
I looked at class hierarchy to figure out what might be the cause and it looks like scalac is confused by following situation. Document from Element class and this class has a select method which returns class called Elements. Elements implements List<Element> and here we get cyclic reference. Although I find this design weird I guess it's a bug in scalac because it should handle any kind of weird java we throw at it. Am I right?
```

Apart from that it was reported that newer version of jsoup fixed that problem, see: http://article.gmane.org/gmane.comp.lang.scala.user/37122
The diff is here: https://github.com/jhy/jsoup/commit/9a2e19e8d3d24f79373f8dc41175b4d9ef0b79cd
That might help understanding the problem.
